Added a jira client.